# ftree_kg

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  release-notes.md
.claude/: CLAUDE.md
.claude/commands/: bump.md  setup-copilot.md
.claude/plugins/: blocklist.json  install-counts-cache.json  known_marketplaces.json
.claude/skills/codekg/: SKILL.md
.dockg/snapshots/: manifest.json
.filetreekg/snapshots/: manifest.json
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
analysis/: filetreekg_analysis.md
docs/: CHEATSHEET.md  CLI.md  README.md  pipeline.md
examples/: query_examples.py
filetreekg/: __init__.py  adapter.py  extractor.py  module.py
filetreekg/tests/: test_extractor.py  test_query.py
kg_types/: pyproject.toml  pytest.ini
kg_types/src/kg_types/: __init__.py  extractor.py  module.py  specs.py
kg_types/src/tests/: test_extractor.py  test_module.py  test_specs.py
kg_utils/: pyproject.toml
kg_utils/src/kg_utils/: __init__.py
kg_utils/src/kg_utils/snapshots/: __init__.py  manager.py  models.py
kg_utils/src/kg_utils/types/: __init__.py  extractor.py  module.py  specs.py
kg_utils/src/tests/: test_snapshots.py  test_types.py
scripts/: setup.sh
src/: __init__.py  adapter.py  config.py  extractor.py  module.py  snapshots.py
src/cli/: __init__.py  __main__.py  cmd_analyze.py  cmd_build.py  cmd_query.py  cmd_snapshot.py  main.py  options.py
src/ftree_kg/: __init__.py  adapter.py  config.py  extractor.py  metadata.py  module.py  snapshots.py  types.py
src/ftree_kg/cli/: __init__.py  __main__.py  cmd_analyze.py  cmd_build.py  cmd_hooks.py  cmd_query.py  cmd_snapshot.py  cmd_status.py  group.py  main.py  options.py
src/tests/: test_extractor.py  test_query.py
tests/: test_extractor.py  test_query.py
