# pyproject.toml — FTreeKG package configuration (PEP 621)
#
# Build system : Poetry 2.x with PEP 621 [project] table
#
# Quick install (pip)
# -------------------
#   pip install -e ".[dev]"             core + dev tools (pytest, black, ruff, mypy)
#   pip install -e ".[kgdeps]"          core + KG integrations (pycode-kg, doc-kg, agent-kg)
#   pip install -e ".[all]"             everything above
#   pip install -e "."                  core runtime only (click, kg-snapshot, kg-utils)
#
# Quick install (poetry)
# ----------------------
#   poetry install --all-extras         everything
#   poetry install --extras "dev"       core + dev tools only
#   poetry install --extras "kgdeps"    core + KG integrations only
#   poetry install                      core runtime only
#
# First-time setup
# ----------------
#   python -m venv .venv
#   source .venv/bin/activate       # Windows: .venv\Scripts\activate
#   pip install -e ".[all]"
#
# Run tests
# ---------
#   pytest                          uses pytest.ini (testpaths = tests/)
#   pytest -m "not slow"            skip slow tests
#   pytest --cov=ftree_kg           with coverage
#
# Build KG indices (after code changes)
# --------------------------------------
#   codekg build --repo . --wipe
#   dockg build --repo . --wipe

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# PEP 621 project metadata
# ---------------------------------------------------------------------------
[project]
name = "ftree-kg"
version = "0.7.0"
description = "KGModule for file tree knowledge graphs"
readme = "README.md"
license = { text = "Elastic-2.0" }
authors = [
    { name = "Eric G. Suchanek, PhD", email = "suchanek@mac.com" }
]
keywords = ["knowledge-graph", "filesystem", "semantic-search", "kgmodule"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1.0,<9",
    "kg-snapshot @ git+https://github.com/Flux-Frontiers/kg_snapshot.git",
    "kg-utils @ git+https://github.com/Flux-Frontiers/KG_utils.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=22.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pylint>=4.0.5",
]
kgdeps = [
    "pycode-kg @ git+https://github.com/Flux-Frontiers/pycode_kg.git",
    "doc-kg @ git+https://github.com/Flux-Frontiers/doc_kg.git",
    "agent-kg @ git+https://github.com/Flux-Frontiers/agent_kg.git",
]
all = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=22.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pylint>=4.0.5",
    "pycode-kg @ git+https://github.com/Flux-Frontiers/pycode_kg.git",
    "doc-kg @ git+https://github.com/Flux-Frontiers/doc_kg.git",
    "agent-kg @ git+https://github.com/Flux-Frontiers/agent_kg.git",
]

[project.urls]
Repository = "https://github.com/flux-frontiers/FTreeKG"

[project.scripts]
ftreekg          = "ftree_kg.cli:cli"
ftreekg-build    = "ftree_kg.cli.cmd_build:build"
ftreekg-query    = "ftree_kg.cli.cmd_query:query"
ftreekg-pack     = "ftree_kg.cli.cmd_query:pack"
ftreekg-analyze  = "ftree_kg.cli.cmd_analyze:analyze"
ftreekg-snapshot = "ftree_kg.cli.cmd_snapshot:snapshot"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.black]
line-length    = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.mypy]
python_version     = "3.12"
strict             = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Optional kgdeps — treated as Any whether installed or not.
module = ["kg_rag.*", "ftree_kg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# kg-snapshot is a required runtime dep — always installed, so follow its types.
module = ["kg_snapshot.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pylint.MASTER]
ignored-modules = [
    "pycode_kg", "pycode_kg.module", "pycode_kg.module.types",
    "kg_rag", "kg_rag.adapters.base", "kg_rag.primitives",
    "kg_snapshot", "kg_snapshot.snapshots",
    "click", "pytest",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "duplicate-code",
    "missing-function-docstring",
    "redefined-outer-name",
    "wrong-import-order",
    "import-outside-toplevel",
    "unused-argument",
    "redefined-builtin",
    "broad-exception-caught",
    "unspecified-encoding",
]

# ---------------------------------------------------------------------------
# FTreeKG / CodeKG / DocKG index configuration
# ---------------------------------------------------------------------------
[tool.filetreekg]
# Directories to include in indexing (empty = include all)
#include = ["src", "docs"]
exclude = ["archives", "backups"]  # additional dirs beyond DEFAULT_SKIP_DIRS

[tool.pycodekg]
# Directories included in the CodeKG knowledge graph build and analysis
include = ["src"]

[tool.dockg]
# Directories excluded from the DocKG knowledge graph build
exclude = ["bundles", "dist"]
