# pyproject.toml — FTreeKG package configuration (PEP 621)
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-04-30
#
# Build system : Poetry 2.x with PEP 621 [project] table
#
# Quick install (pip)
# -------------------
#   pip install -e ".[dev]"             core + dev tools (pytest, ruff, mypy, etc.)
#   pip install -e ".[kgdeps]"          core + KG integrations (pycode-kg, doc-kg)
#   pip install -e ".[all]"             everything above
#   pip install -e "."                  core runtime only
#
# Quick install (poetry)
# ----------------------
#   poetry install --all-extras         everything
#   poetry install --extras "dev"       core + dev tools only
#   poetry install --extras "kgdeps"    core + KG integrations only
#   poetry install                      core runtime only
#
# First-time setup
# ----------------
#   python -m venv .venv
#   source .venv/bin/activate       # Windows: .venv\Scripts\activate
#   pip install -e ".[dev]"
#
# Run tests
# ---------
#   pytest                          uses pytest.ini (testpaths = tests/)
#   pytest -m "not slow"            skip slow tests
#   pytest --cov=ftree_kg           with coverage
#
# Build KG indices (after code changes)
# --------------------------------------
#   ftreekg build --repo .

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "ftree_kg", from = "src" }]

[tool.poetry.group.dev.dependencies]
detect-secrets = ">=1.5.0"
mypy           = ">=1.10.0"
pre-commit     = ">=4.5.1"
pylint         = ">=4.0.5"
pytest         = ">=8.0.0"
pytest-cov     = ">=5.0.0"
ruff           = ">=0.4.0"
# KG sister packages not yet on PyPI — install manually:
#   pip install git+https://github.com/Flux-Frontiers/agent_kg.git
agent-kg = { git = "https://github.com/Flux-Frontiers/agent_kg.git" }

# ---------------------------------------------------------------------------
# PEP 621 project metadata
# ---------------------------------------------------------------------------
[project]
name = "ftree-kg"
version = "0.8.0"
description = "KGModule for file tree knowledge graphs"
readme = "README.md"
license = "Elastic-2.0"
authors = [
    { name = "Eric G. Suchanek, PhD", email = "suchanek@mac.com" }
]
keywords = ["knowledge-graph", "filesystem", "lancedb", "sqlite", "semantic-search", "kgmodule"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1.0,<9",
    "kgmodule-utils>=0.2.1",
    "lancedb>=0.29.0",
    "pillow>=10.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5.0",
    "mypy>=1.10.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
# pycode-kg and doc-kg are on PyPI; agent-kg is not yet — install manually from git
kgdeps = [
    "doc-kg>=0.11.0",
    "pycode-kg>=0.16.0",
]
all = [
    "detect-secrets>=1.5.0",
    "doc-kg>=0.12.0",
    "mypy>=1.10.0",
    "pre-commit>=4.5.1",
    "pycode-kg>=0.17.0",
    "pylint>=4.0.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage   = "https://github.com/Flux-Frontiers/FTreeKG"
Repository = "https://github.com/Flux-Frontiers/FTreeKG"

[project.scripts]
ftreekg          = "ftree_kg.cli:cli"
ftreekg-build    = "ftree_kg.cli.cmd_build:build"
ftreekg-query    = "ftree_kg.cli.cmd_query:query"
ftreekg-pack     = "ftree_kg.cli.cmd_query:pack"
ftreekg-analyze  = "ftree_kg.cli.cmd_analyze:analyze"
ftreekg-snapshot = "ftree_kg.cli.cmd_snapshot:snapshot"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
warn_unused_ignores    = true
disallow_untyped_defs  = true
ignore_missing_imports = true
mypy_path              = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that exercise real external dependencies (model, LanceDB)",
]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "broad-exception-caught",   # W0718
    "cell-var-from-loop",       # W0640
    "cyclic-import",            # R0401
    "import-outside-toplevel",  # C0415
    "undefined-variable",       # E0602
]

# ---------------------------------------------------------------------------
# FTreeKG / PyCodeKG / DocKG index configuration
# ---------------------------------------------------------------------------
[tool.filetreekg]
# Directories to include in indexing (empty = include all)
#include = ["src", "docs"]
exclude = ["archives", "backups"]  # additional dirs beyond DEFAULT_SKIP_DIRS

[tool.pycodekg]
# Exclude test directories from the knowledge graph.
# Tests skew architectural metrics (fan-in, public API surface, docstring coverage)
exclude = ["tests"]
include = ["src"]

[tool.dockg]
exclude = [
    "__pycache__", "bundles", "dist", "src", "tests",
]
